--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     
-    <title>Lorenzo Git Page </title>
+    <title>Lorenzo&#39;s Git Page </title>
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
 
@@ -52,7 +52,7 @@
       <nav class="pv3 ph3 ph4-ns" role="navigation">
   <div class="flex-l justify-between items-center center">
     <a href="http://lorenzobrunetti.github.io/" class="f3 fw2 hover-white no-underline white-90 dib">
-      Lorenzo Git Page
+      Lorenzo&#39;s Git Page
     </a>
     <div class="flex-l items-center">
       
@@ -88,7 +88,7 @@
     <footer class="bg-black bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
   <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="http://lorenzobrunetti.github.io/" >
-    &copy; 2019 Lorenzo Git Page
+    &copy; 2019 Lorenzo&#39;s Git Page
   </a>
     <div>
 
