--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       <div class="blah w-100">
         <h1 class="f3 fw1 athelas mt0 lh-title">
           <a href="/posts/my-first-post/" class="color-inherit dim link">
-            Is a kind of test Blog..
+            It&#39;s a kind of test Blog..
             </a>
         </h1>
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
